Fix onboarding layout on mobile.

--- a/src/views/onboarding/Onboarding.scss
+++ b/src/views/onboarding/Onboarding.scss
@@ -77,7 +77,7 @@
         background-position: left top;
 
         @media (max-width: 768px) {
-          max-height: 40%;
+          max-height: 50%;
           background-size: 100%;
         }
       }
@@ -114,7 +114,7 @@
               margin-right: 84px;
 
               @media (max-width: 768px) {
-                padding: 50px 0px 10px 0px;
+                padding: 10px 0px 10px 0px;
                 margin-left: 15px;
               }
             }
@@ -142,6 +142,10 @@
 
           .accept-policy-holder {
             padding: 60px 84px;
+
+            @media (max-width: 768px) {
+              padding-top: 20px !important;
+            }
 
             :root {
               --color: rebeccapurple;
@@ -247,7 +251,7 @@
         }
 
         @media (max-width: 768px) {
-          max-height: 40%;
+          max-height: 50%;
           background-size: 100%;
         }
       }
@@ -580,7 +584,7 @@
       position: absolute;
       left: 0;
       margin: 0 auto;
-      bottom: 200px;
+      bottom: auto;
       width: 92px;
       height: 44px;
       background-color: #80F0BE;
@@ -999,5 +1003,23 @@
   83% {
     opacity: 1;
     border: 1px solid rgba($accent, 0)
+  }
+}
+
+.mobile-text-padding {
+  @media (max-width: 768px) {
+    padding: 0px !important;
+  }
+}
+
+.mobile-fake-escrow-table-padding-top {
+  @media (max-width: 768px) {
+    padding-top: 60px !important;
+  }
+}
+
+.mobile-hide {
+  @media (max-width: 768px) {
+    display: none;
   }
 }
